@@ -37,6 +37,7 @@ basedir = {
     'win32'  : ['win32_static',],
     'linux2' : ['/usr/local', '/usr',],
     'linux'  : ['/usr/local', '/usr',],
+    'cygwin' : ['/usr/local', '/usr',],
     # Charles Moad recommends not putting in /usr/X11R6 for darwin
     # because freetype in this dir is too old for mpl
     'darwin' : ['/sw/lib/freetype2', '/sw/lib/freetype219', '/usr/local',
