@@ -130,6 +130,8 @@ public:
 		       "readpng");
     add_varargs_method("from_images", &_image_module::from_images, 
 		       "from_images");
+    add_varargs_method("pcolor", &_image_module::pcolor,
+               "pcolor");
     initialize( "The _image module" );
   }
   
@@ -142,10 +144,12 @@ private:
   Py::Object fromarray2 (const Py::Tuple &args);
   Py::Object readpng (const Py::Tuple &args);
   Py::Object from_images (const Py::Tuple &args);
+  Py::Object pcolor (const Py::Tuple &args);
   static char _image_module_fromarray__doc__[];
   static char _image_module_fromarray2__doc__[];
   static char _image_module_frombyte__doc__[];
   static char _image_module_frombuffer__doc__[];
+  static char _image_module_pcolor__doc__[];
 
 };
 
